# 1d_blood_by_taylor_galerkin_method

./: .gitignore  A.py  CMakeLists.txt  Makefile  Q.py  README.md  U.py  build.sh  exception-args.h  exception-manager.h  flag.h  gauss.h  left-part.h  main.cpp  params.h  right-part.h  shapefunction.h  visualize.py
.github/workflows/: clang_tidy.yml  cppcheck.yml
cmake/: FindEigen.cmake  FindGLOG.cmake
input/: main.go
src/: CMakeLists.txt  exception-args.h  exception-manager.h  flag.h  flow1D.cpp  flow1D.h  gauss.h  main.cpp  params.h  preprocess.cpp  right-part.h  shapefunction.h
src/Flow1D/: TaylorGalerkin
